--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
  
 	implementation 'javax.json:javax.json-api:1.0'
 	implementation 'org.glassfish:javax.json:1.0.4'
-	
+	implementation 'org.glassfish:javax.json:1.0.4'
+	implementation  'org.apache.logging.log4j:log4j-api:2.14.1'
+	implementation  'org.apache.logging.log4j:log4j-core:2.14.1'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
